--- a/Norm.Tests/Norm.Tests.csproj
+++ b/Norm.Tests/Norm.Tests.csproj
@@ -48,7 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConnectionExtensionTests.cs" />
+    <Compile Include="DatabaseTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryBuilder\DeleteBuilderTests.cs" />
     <Compile Include="QueryBuilder\InsertBuilderTests.cs" />
