--- a/Norm/Norm.csproj
+++ b/Norm/Norm.csproj
@@ -40,18 +40,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Database.cs" />
     <Compile Include="QueryBuilder\BaseQueryBuilder.cs" />
     <Compile Include="QueryBuilder\DeleteBuilder.cs" />
     <Compile Include="QueryBuilder\InsertBuilder.cs" />
-    <Compile Include="ConnectionExtensions.cs" />
-    <Compile Include="DataReaderExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryBuilder\IQueryBuilder.cs" />
     <Compile Include="QueryBuilder\SelectBuilder.cs" />
     <Compile Include="QueryBuilder\SqlExpressionVisitor.cs" />
     <Compile Include="QueryBuilder\UpdateBuilder.cs" />
+    <Compile Include="Query\BaseQuery.cs" />
+    <Compile Include="Query\DeleteQuery.cs" />
+    <Compile Include="Query\InsertQuery.cs" />
+    <Compile Include="Query\SelectQuery.cs" />
+    <Compile Include="Query\UpdateQuery.cs" />
     <Compile Include="TypeConverter.cs" />
     <Compile Include="TypeExtensions.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
